add static elements to dev example

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="https://code.jquery.com/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.css" />
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.4/d3.js"></script>
 
 
@@ -24,9 +25,11 @@
 </head>
 
 <body>
+  <h1>Time series example</h1>
+  <div id="viz"></div>
 
-  <div id="vis"></div>
   <script src="reusable-time-series/js/time-series.js"></script>
+  <!--<script src="reusable-time-series/js/time-series-chart.js"></script>-->
   <script src="js/main.js"></script>
 </body>
 
